# hs-string-bench

./: README.md  hs-string-bench.cabal
data/: toolbox.spec
src/: Main.hs
